feat: update branding and descriptions to reflect GEEZ MADE IN ETHIOPIA

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ge'ez Shirts - Modern Fashion</title>
+    <title>GEEZ MADE IN ETHIOPIA - Wear Your Heritage</title>
     
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
